Bug 337301 - Crash during screen resolution change
Summary: Crash during screen resolution change
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR crash
Target Milestone: 1.0
Assignee: Aleix Pol
URL:
Keywords:
: 355355 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-07-10 07:13 UTC by Eike Hein
Modified: 2015-12-03 16:34 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eike Hein 2014-07-10 07:13:56 UTC
Thread 1 (Thread 0x7f62adee0980 (LWP 5918)):
[KCrash Handler]
#6  0x000000348b635c39 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
#7  0x000000348b637348 in __GI_abort () at abort.c:89
#8  0x00007f62b32d40d2 in qt_message_fatal (context=..., message=...) at global/qlogging.cpp:1364
#9  0x00007f62b32d1cc2 in QMessageLogger::fatal (this=0x7fffa5afaf00, msg=0x7f62b35d7138 "ASSERT: \"%s\" in file %s, line %d") at global/qlogging.cpp:669
#10 0x00007f62b32cc3b0 in qt_assert (assertion=0x4bc598 "!view->fillScreen() || view->geometry() == screen->geometry()", file=0x4bc248 "/home/sho/devel/src/kde/workspace/plasma-workspace/shell/shellcorona.cpp", line=391) at global/qglobal.cpp:2127
#11 0x000000000047f8dc in ShellCorona::screenInvariants (this=0xdb4a20) at /home/sho/devel/src/kde/workspace/plasma-workspace/shell/shellcorona.cpp:391
#12 0x00000000004816e6 in ShellCorona::reconsiderOutputs (this=0xdb4a20) at /home/sho/devel/src/kde/workspace/plasma-workspace/shell/shellcorona.cpp:652
#13 0x0000000000491787 in QtPrivate::FunctorCall<QtPrivate::IndexesList<>, QtPrivate::List<>, void, void (ShellCorona::*)()>::call(void (ShellCorona::*)(), ShellCorona*, void**) (f=(void (ShellCorona::*)(ShellCorona * const)) 0x481540 <ShellCorona::reconsiderOutputs()>, o=0xdb4a20, arg=0x7fffa5afb320) at /home/sho/devel/src/qt5/qtbase/src/corelib/kernel/qobjectdefs_impl.h:508
#14 0x00000000004905ff in QtPrivate::FunctionPointer<void (ShellCorona::*)()>::call<QtPrivate::List<>, void>(void (ShellCorona::*)(), ShellCorona*, void**) (f=(void (ShellCorona::*)(ShellCorona * const)) 0x481540 <ShellCorona::reconsiderOutputs()>, o=0xdb4a20, arg=0x7fffa5afb320) at /home/sho/devel/src/qt5/qtbase/src/corelib/kernel/qobjectdefs_impl.h:527
#15 0x000000000048e02f in QtPrivate::QSlotObject<void (ShellCorona::*)(), QtPrivate::List<>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) (which=1, this_=0xddedd0, r=0xdb4a20, a=0x7fffa5afb320, ret=0x0) at /home/sho/devel/src/qt5/qtbase/src/corelib/kernel/qobject_impl.h:151
#16 0x00007f62b3545f6d in QtPrivate::QSlotObjectBase::call (this=0xddedd0, r=0xdb4a20, a=0x7fffa5afb320) at ../../include/QtCore/../../src/corelib/kernel/qobject_impl.h:132
#17 0x00007f62b35431d3 in QMetaObject::activate (sender=0xdaa170, signalOffset=3, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3666
#18 0x00007f62b3542aee in QMetaObject::activate (sender=0xdaa170, m=0x7f62b39d76e0 <QTimer::staticMetaObject>, local_signal_index=0, argv=0x0) at kernel/qobject.cpp:3546
#19 0x00007f62b35d268d in QTimer::timeout (this=0xdaa170) at .moc/moc_qtimer.cpp:191
#20 0x00007f62b354e027 in QTimer::timerEvent (this=0xdaa170, e=0x7fffa5afbdb0) at kernel/qtimer.cpp:255
#21 0x00007f62b353ca12 in QObject::event (this=0xdaa170, e=0x7fffa5afbdb0) at kernel/qobject.cpp:1222
#22 0x00007f62b435b7be in QApplicationPrivate::notify_helper (this=0xcaad20, receiver=0xdaa170, e=0x7fffa5afbdb0) at kernel/qapplication.cpp:3522
#23 0x00007f62b4358f50 in QApplication::notify (this=0x7fffa5afc240, receiver=0xdaa170, e=0x7fffa5afbdb0) at kernel/qapplication.cpp:2975
#24 0x00007f62b3501688 in QCoreApplication::notifyInternal (this=0x7fffa5afc240, receiver=0xdaa170, event=0x7fffa5afbdb0) at kernel/qcoreapplication.cpp:935
#25 0x00007f62b35052b1 in QCoreApplication::sendEvent (receiver=0xdaa170, event=0x7fffa5afbdb0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
#26 0x00007f62b3576342 in QTimerInfoList::activateTimers (this=0xcd5840) at kernel/qtimerinfo_unix.cpp:643
#27 0x00007f62b357762c in timerSourceDispatch (source=0xcd57e0) at kernel/qeventdispatcher_glib.cpp:185
#28 0x000000348d6492a6 in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#29 0x000000348d649628 in g_main_context_iterate.isra () from /lib64/libglib-2.0.so.0
#30 0x000000348d6496dc in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#31 0x00007f62b3577fbd in QEventDispatcherGlib::processEvents (this=0xcefbb0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#32 0x00007f62a770b702 in QPAEventDispatcherGlib::processEvents (this=0xcefbb0, flags=...) at eventdispatchers/qeventdispatcher_glib.cpp:123
#33 0x00007f62b34fe3a6 in QEventLoop::processEvents (this=0x7fffa5afc0e0, flags=...) at kernel/qeventloop.cpp:136
#34 0x00007f62b34fe67f in QEventLoop::exec (this=0x7fffa5afc0e0, flags=...) at kernel/qeventloop.cpp:212
#35 0x00007f62b3501d43 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1188
#36 0x00007f62b3ad348a in QGuiApplication::exec () at kernel/qguiapplication.cpp:1446
#37 0x00007f62b435877d in QApplication::exec () at kernel/qapplication.cpp:2767
#38 0x0000000000460af5 in main (argc=3, argv=0x7fffa5afc6a8) at /home/sho/devel/src/kde/workspace/plasma-workspace/shell/main.cpp:109

Reproducible: Always
Comment 1 Aleix Pol 2014-07-10 09:51:52 UTC
Git commit 166db46065e3d66c610ec40c4865df82de96994a by Aleix Pol.
Committed on 10/07/2014 at 09:48.
Pushed by apol into branch 'master'.

Comment out an assert we cannot fully control yet

M  +3    -1    shell/shellcorona.cpp

http://commits.kde.org/plasma-workspace/166db46065e3d66c610ec40c4865df82de96994a
Comment 2 Marco Martin 2015-12-03 16:34:31 UTC
*** Bug 355355 has been marked as a duplicate of this bug. ***