Comment out an assert we cannot fully control yet

BUG: 337301